recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:3: error: identifier expected but 'override' found.
override def run() {
^FourSquare:13: error: identifier expected but ')' found.
  	right(90.);
                 ^